tutorials/write-you-a-haskell/gen/LcParser.y
-- Generated by RTK from grammar 'Lc'. Do not edit by hand.
{
{-# LANGUAGE DeriveDataTypeable #-}
module LcParser where
import qualified Data.Generics as Gen
import qualified LcLexer as L (Token(..), PosToken(..), AlexPosn(..), alexScanTokens)
}

%name parseLc
%tokentype { L.PosToken }
%monad { Either String }
%error { parseError }

%token

rtk__eof { L.PosToken _ L.EndOfFile }
tok_Expr_dummy_1 { L.PosToken _ L.Tk__tok_Expr_dummy_1 }
tok_Id_dummy_0 { L.PosToken _ L.Tk__tok_Id_dummy_0 }
tok_Lc_dummy_2 { L.PosToken _ L.Tk__tok_Lc_dummy_2 }
tok_true_12 { L.PosToken _ L.Tk__tok_true_12 }
tok_then_6 { L.PosToken _ L.Tk__tok_then_6 }
tok_let_2 { L.PosToken _ L.Tk__tok_let_2 }
tok_in_4 { L.PosToken _ L.Tk__tok_in_4 }
tok_if_5 { L.PosToken _ L.Tk__tok_if_5 }
tok_false_13 { L.PosToken _ L.Tk__tok_false_13 }
tok_else_7 { L.PosToken _ L.Tk__tok_else_7 }
tok__symbol__0 { L.PosToken _ L.Tk__tok__symbol__0 }
tok__eql__eql__8 { L.PosToken _ L.Tk__tok__eql__eql__8 }
tok__eql__3 { L.PosToken _ L.Tk__tok__eql__3 }
tok__minus__symbol__1 { L.PosToken _ L.Tk__tok__minus__symbol__1 }
tok__minus__10 { L.PosToken _ L.Tk__tok__minus__10 }
tok__plus__9 { L.PosToken _ L.Tk__tok__plus__9 }
tok__star__11 { L.PosToken _ L.Tk__tok__star__11 }
tok__rparen__15 { L.PosToken _ L.Tk__tok__rparen__15 }
tok__lparen__14 { L.PosToken _ L.Tk__tok__lparen__14 }
id { L.PosToken _ (L.Tk__id _) }
num { L.PosToken _ (L.Tk__num _) }
qq_Id { L.PosToken _ (L.Tk__qq_Id _) }
qq_Expr { L.PosToken _ (L.Tk__qq_Expr _) }
qq_Lc { L.PosToken _ (L.Tk__qq_Lc _) }

%%

Lc__top : Lc rtk__eof { $1 }

Lc : tok_Lc_dummy_2 Lc tok_Lc_dummy_2 { Ctr__Lc__0 (rtkPosOf $1) $2 } |
     tok_Expr_dummy_1 Expr tok_Expr_dummy_1 { Ctr__Lc__1 (rtkPosOf $1) $2 } |
     tok_Id_dummy_0 Id tok_Id_dummy_0 { Ctr__Lc__2 (rtkPosOf $1) $2 }

Lc : qq_Lc { Anti_Lc (tkVal_qq_Lc $1) } |
     Expr { Ctr__Lc__3 (rtkPosOf $1) $1 }

Atom : qq_Expr { Anti_Expr (tkVal_qq_Expr $1) } |
       num { Ctr__Expr__0 (rtkPosOf $1) (tkVal_num $1) } |
       tok_true_12 { Ctr__Expr__1 (rtkPosOf $1) } |
       tok_false_13 { Ctr__Expr__2 (rtkPosOf $1) } |
       Id { Ctr__Expr__3 (rtkPosOf $1) $1 } |
       tok__lparen__14 Expr tok__rparen__15 { $2 }

App : App Atom { Ctr__Expr__5 (rtkPosOf $1) $1 $2 } |
      Atom { $1 }

Mul : Mul tok__star__11 App { Ctr__Expr__7 (rtkPosOf $1) $1 $3 } |
      App { $1 }

Add : Add tok__plus__9 Mul { Ctr__Expr__9 (rtkPosOf $1) $1 $3 } |
      Add tok__minus__10 Mul { Ctr__Expr__10 (rtkPosOf $1) $1 $3 } |
      Mul { $1 }

Eq : Eq tok__eql__eql__8 Add { Ctr__Expr__12 (rtkPosOf $1) $1 $3 } |
     Add { $1 }

Expr : tok__symbol__0 Id tok__minus__symbol__1 Expr { Ctr__Expr__14 (rtkPosOf $1) $2 $4 } |
       tok_let_2 Id tok__eql__3 Expr tok_in_4 Expr { Ctr__Expr__15 (rtkPosOf $1) $2 $4 $6 } |
       tok_if_5 Expr tok_then_6 Expr tok_else_7 Expr { Ctr__Expr__16 (rtkPosOf $1) $2 $4 $6 } |
       Eq { $1 }

Id : qq_Id { Anti_Id (tkVal_qq_Id $1) } |
     id { Ctr__Id__0 (rtkPosOf $1) (tkVal_id $1) }


{
parseError :: [L.PosToken] -> Either String a
parseError [] = Left "unexpected end of input"
parseError (L.PosToken (L.AlexPn _ line col) tok : _) =
    Left $ show line ++ ":" ++ show col ++ ":unexpected " ++ showRtkToken tok

-- Render a token the way it appears in the source, for error messages
showRtkToken :: L.Token -> String
showRtkToken L.EndOfFile = "end of input"
showRtkToken L.Tk__tok_Expr_dummy_1 = "'tok_Expr_dummy_1'"
showRtkToken L.Tk__tok_Id_dummy_0 = "'tok_Id_dummy_0'"
showRtkToken L.Tk__tok_Lc_dummy_2 = "'tok_Lc_dummy_2'"
showRtkToken L.Tk__tok_true_12 = "'true'"
showRtkToken L.Tk__tok_then_6 = "'then'"
showRtkToken L.Tk__tok_let_2 = "'let'"
showRtkToken L.Tk__tok_in_4 = "'in'"
showRtkToken L.Tk__tok_if_5 = "'if'"
showRtkToken L.Tk__tok_false_13 = "'false'"
showRtkToken L.Tk__tok_else_7 = "'else'"
showRtkToken L.Tk__tok__symbol__0 = "'\\'"
showRtkToken L.Tk__tok__eql__eql__8 = "'=='"
showRtkToken L.Tk__tok__eql__3 = "'='"
showRtkToken L.Tk__tok__minus__symbol__1 = "'->'"
showRtkToken L.Tk__tok__minus__10 = "'-'"
showRtkToken L.Tk__tok__plus__9 = "'+'"
showRtkToken L.Tk__tok__star__11 = "'*'"
showRtkToken L.Tk__tok__rparen__15 = "')'"
showRtkToken L.Tk__tok__lparen__14 = "'('"
showRtkToken (L.Tk__id v) = "id " ++ show v
showRtkToken (L.Tk__num v) = "num " ++ show v
showRtkToken (L.Tk__qq_Id v) = "qq_Id " ++ show v
showRtkToken (L.Tk__qq_Expr v) = "qq_Expr " ++ show v
showRtkToken (L.Tk__qq_Lc v) = "qq_Lc " ++ show v

-- Source position of a node: every constructor except the Anti_* splice
-- artifacts stores the position of its alternative's first symbol in its
-- first field. Positions are transparent for equality and ordering, so two
-- ASTs that differ only in source positions (e.g. a quasi-quote parsed at
-- compile time vs the same construct parsed at run time) compare equal.
newtype RtkPos = RtkPos L.AlexPosn deriving (Show, Gen.Data, Gen.Typeable)
instance Eq RtkPos where _ == _ = True
instance Ord RtkPos where compare _ _ = EQ

-- The position used where no source token exists: empty productions, empty
-- lists, absent optionals and Anti_* quasi-quote splices
rtkNoPos :: RtkPos
rtkNoPos = RtkPos (L.AlexPn 0 0 0)

class RtkPosOf a where
    rtkPosOf :: a -> RtkPos
instance RtkPosOf L.PosToken where
    rtkPosOf (L.PosToken p _) = RtkPos p
instance RtkPosOf a => RtkPosOf [a] where
    rtkPosOf (x : _) = rtkPosOf x
    rtkPosOf []      = rtkNoPos
instance RtkPosOf a => RtkPosOf (Maybe a) where
    rtkPosOf (Just x) = rtkPosOf x
    rtkPosOf Nothing  = rtkNoPos
-- A Char carries no position; this also covers String token payloads
instance RtkPosOf Char where
    rtkPosOf _ = rtkNoPos
instance RtkPosOf Int where rtkPosOf _ = rtkNoPos

-- Recover a token's payload from the whole positioned token: %token
-- bindings keep the L.PosToken so semantic actions can read its position
tkVal_id :: L.PosToken -> String
tkVal_id (L.PosToken _ (L.Tk__id v)) = v
tkVal_id t = error ("rtk internal error: token id expected, got " ++ showRtkToken (L.ptToken t))
tkVal_num :: L.PosToken -> Int
tkVal_num (L.PosToken _ (L.Tk__num v)) = v
tkVal_num t = error ("rtk internal error: token num expected, got " ++ showRtkToken (L.ptToken t))
tkVal_qq_Id :: L.PosToken -> String
tkVal_qq_Id (L.PosToken _ (L.Tk__qq_Id v)) = v
tkVal_qq_Id t = error ("rtk internal error: token qq_Id expected, got " ++ showRtkToken (L.ptToken t))
tkVal_qq_Expr :: L.PosToken -> String
tkVal_qq_Expr (L.PosToken _ (L.Tk__qq_Expr v)) = v
tkVal_qq_Expr t = error ("rtk internal error: token qq_Expr expected, got " ++ showRtkToken (L.ptToken t))
tkVal_qq_Lc :: L.PosToken -> String
tkVal_qq_Lc (L.PosToken _ (L.Tk__qq_Lc v)) = v
tkVal_qq_Lc t = error ("rtk internal error: token qq_Lc expected, got " ++ showRtkToken (L.ptToken t))

data Lc = Ctr__Lc__0 RtkPos Lc |
          Ctr__Lc__1 RtkPos Expr |
          Ctr__Lc__2 RtkPos Id |
          Anti_Lc String |
          Ctr__Lc__3 RtkPos Expr
          deriving (Ord, Eq, Show, Gen.Data, Gen.Typeable)
instance RtkPosOf Lc where
    rtkPosOf (Ctr__Lc__0 p _) = p
    rtkPosOf (Ctr__Lc__1 p _) = p
    rtkPosOf (Ctr__Lc__2 p _) = p
    rtkPosOf (Anti_Lc _) = rtkNoPos
    rtkPosOf (Ctr__Lc__3 p _) = p
data Expr = Anti_Expr String |
            Ctr__Expr__0 RtkPos Int |
            Ctr__Expr__1 RtkPos |
            Ctr__Expr__2 RtkPos |
            Ctr__Expr__3 RtkPos Id |
            Ctr__Expr__5 RtkPos Expr Expr |
            Ctr__Expr__7 RtkPos Expr Expr |
            Ctr__Expr__9 RtkPos Expr Expr |
            Ctr__Expr__10 RtkPos Expr Expr |
            Ctr__Expr__12 RtkPos Expr Expr |
            Ctr__Expr__14 RtkPos Id Expr |
            Ctr__Expr__15 RtkPos Id Expr Expr |
            Ctr__Expr__16 RtkPos Expr Expr Expr
            deriving (Ord, Eq, Show, Gen.Data, Gen.Typeable)
instance RtkPosOf Expr where
    rtkPosOf (Anti_Expr _) = rtkNoPos
    rtkPosOf (Ctr__Expr__0 p _) = p
    rtkPosOf (Ctr__Expr__1 p) = p
    rtkPosOf (Ctr__Expr__2 p) = p
    rtkPosOf (Ctr__Expr__3 p _) = p
    rtkPosOf (Ctr__Expr__5 p _ _) = p
    rtkPosOf (Ctr__Expr__7 p _ _) = p
    rtkPosOf (Ctr__Expr__9 p _ _) = p
    rtkPosOf (Ctr__Expr__10 p _ _) = p
    rtkPosOf (Ctr__Expr__12 p _ _) = p
    rtkPosOf (Ctr__Expr__14 p _ _) = p
    rtkPosOf (Ctr__Expr__15 p _ _ _) = p
    rtkPosOf (Ctr__Expr__16 p _ _ _) = p
data Id = Anti_Id String |
          Ctr__Id__0 RtkPos String
          deriving (Ord, Eq, Show, Gen.Data, Gen.Typeable)
instance RtkPosOf Id where
    rtkPosOf (Anti_Id _) = rtkNoPos
    rtkPosOf (Ctr__Id__0 p _) = p
}
