tutorials/write-you-a-haskell/gen/LcParser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.2 from tutorials/write-you-a-haskell/gen/LcParser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseLc -> Lc__top                          (0)
	Lc__top -> Lc rtk__eof                             (1)
	Lc -> tok_Lc_dummy_2 Lc tok_Lc_dummy_2             (2)
	Lc -> tok_Expr_dummy_1 Expr tok_Expr_dummy_1       (3)
	Lc -> tok_Id_dummy_0 Id tok_Id_dummy_0             (4)
	Lc -> qq_Lc                                        (5)
	Lc -> Expr                                         (6)
	Atom -> qq_Expr                                    (7)
	Atom -> num                                        (8)
	Atom -> tok_true_12                                (9)
	Atom -> tok_false_13                               (10)
	Atom -> Id                                         (11)
	Atom -> tok__lparen__14 Expr tok__rparen__15       (12)
	App -> App Atom                                    (13)
	App -> Atom                                        (14)
	Mul -> Mul tok__star__11 App                       (15)
	Mul -> App                                         (16)
	Add -> Add tok__plus__9 Mul                        (17)
	Add -> Add tok__minus__10 Mul                      (18)
	Add -> Mul                                         (19)
	Eq -> Eq tok__eql__eql__8 Add                      (20)
	Eq -> Add                                          (21)
	Expr -> tok__symbol__0 Id tok__minus__symbol__1 Expr   (22)
	Expr -> tok_let_2 Id tok__eql__3 Expr tok_in_4 Expr   (23)
	Expr -> tok_if_5 Expr tok_then_6 Expr tok_else_7 Expr   (24)
	Expr -> Eq                                         (25)
	Id -> qq_Id                                        (26)
	Id -> id                                           (27)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	rtk__eof       { L.PosToken _ L.EndOfFile }
	tok_Expr_dummy_1{ L.PosToken _ L.Tk__tok_Expr_dummy_1 }
	tok_Id_dummy_0 { L.PosToken _ L.Tk__tok_Id_dummy_0 }
	tok_Lc_dummy_2 { L.PosToken _ L.Tk__tok_Lc_dummy_2 }
	tok_true_12    { L.PosToken _ L.Tk__tok_true_12 }
	tok_then_6     { L.PosToken _ L.Tk__tok_then_6 }
	tok_let_2      { L.PosToken _ L.Tk__tok_let_2 }
	tok_in_4       { L.PosToken _ L.Tk__tok_in_4 }
	tok_if_5       { L.PosToken _ L.Tk__tok_if_5 }
	tok_false_13   { L.PosToken _ L.Tk__tok_false_13 }
	tok_else_7     { L.PosToken _ L.Tk__tok_else_7 }
	tok__symbol__0 { L.PosToken _ L.Tk__tok__symbol__0 }
	tok__eql__eql__8{ L.PosToken _ L.Tk__tok__eql__eql__8 }
	tok__eql__3    { L.PosToken _ L.Tk__tok__eql__3 }
	tok__minus__symbol__1{ L.PosToken _ L.Tk__tok__minus__symbol__1 }
	tok__minus__10 { L.PosToken _ L.Tk__tok__minus__10 }
	tok__plus__9   { L.PosToken _ L.Tk__tok__plus__9 }
	tok__star__11  { L.PosToken _ L.Tk__tok__star__11 }
	tok__rparen__15{ L.PosToken _ L.Tk__tok__rparen__15 }
	tok__lparen__14{ L.PosToken _ L.Tk__tok__lparen__14 }
	id             { L.PosToken _ (L.Tk__id _) }
	num            { L.PosToken _ (L.Tk__num _) }
	qq_Id          { L.PosToken _ (L.Tk__qq_Id _) }
	qq_Expr        { L.PosToken _ (L.Tk__qq_Expr _) }
	qq_Lc          { L.PosToken _ (L.Tk__qq_Lc _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseLc  rule  0
	Lc__top         rule  1
	Lc              rules 2, 3, 4, 5, 6
	Atom            rules 7, 8, 9, 10, 11, 12
	App             rules 13, 14
	Mul             rules 15, 16
	Add             rules 17, 18, 19
	Eq              rules 20, 21
	Expr            rules 22, 23, 24, 25
	Id              rules 26, 27

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseLc -> . Lc__top                         (rule 0)

	tok_Expr_dummy_1shift, and enter state 10
	tok_Id_dummy_0 shift, and enter state 11
	tok_Lc_dummy_2 shift, and enter state 12
	tok_true_12    shift, and enter state 13
	tok_let_2      shift, and enter state 14
	tok_if_5       shift, and enter state 15
	tok_false_13   shift, and enter state 16
	tok__symbol__0 shift, and enter state 17
	tok__lparen__14shift, and enter state 18
	id             shift, and enter state 19
	num            shift, and enter state 20
	qq_Id          shift, and enter state 21
	qq_Expr        shift, and enter state 22
	qq_Lc          shift, and enter state 23

	Lc__top        goto state 24
	Lc             goto state 2
	Atom           goto state 3
	App            goto state 4
	Mul            goto state 5
	Add            goto state 6
	Eq             goto state 7
	Expr           goto state 8
	Id             goto state 9

State 1

	Lc__top -> . Lc rtk__eof                            (rule 1)

	tok_Expr_dummy_1shift, and enter state 10
	tok_Id_dummy_0 shift, and enter state 11
	tok_Lc_dummy_2 shift, and enter state 12
	tok_true_12    shift, and enter state 13
	tok_let_2      shift, and enter state 14
	tok_if_5       shift, and enter state 15
	tok_false_13   shift, and enter state 16
	tok__symbol__0 shift, and enter state 17
	tok__lparen__14shift, and enter state 18
	id             shift, and enter state 19
	num            shift, and enter state 20
	qq_Id          shift, and enter state 21
	qq_Expr        shift, and enter state 22
	qq_Lc          shift, and enter state 23

	Lc             goto state 2
	Atom           goto state 3
	App            goto state 4
	Mul            goto state 5
	Add            goto state 6
	Eq             goto state 7
	Expr           goto state 8
	Id             goto state 9

State 2

	Lc__top -> Lc . rtk__eof                            (rule 1)

	rtk__eof       shift, and enter state 37


State 3

	App -> Atom .                                       (rule 14)

	rtk__eof       reduce using rule 14
	tok_Expr_dummy_1reduce using rule 14
	tok_Lc_dummy_2 reduce using rule 14
	tok_true_12    reduce using rule 14
	tok_then_6     reduce using rule 14
	tok_in_4       reduce using rule 14
	tok_false_13   reduce using rule 14
	tok_else_7     reduce using rule 14
	tok__eql__eql__8reduce using rule 14
	tok__minus__10 reduce using rule 14
	tok__plus__9   reduce using rule 14
	tok__star__11  reduce using rule 14
	tok__rparen__15reduce using rule 14
	tok__lparen__14reduce using rule 14
	id             reduce using rule 14
	num            reduce using rule 14
	qq_Id          reduce using rule 14
	qq_Expr        reduce using rule 14


State 4

	App -> App . Atom                                   (rule 13)
	Mul -> App .                                        (rule 16)

	rtk__eof       reduce using rule 16
	tok_Expr_dummy_1reduce using rule 16
	tok_Lc_dummy_2 reduce using rule 16
	tok_true_12    shift, and enter state 13
	tok_then_6     reduce using rule 16
	tok_in_4       reduce using rule 16
	tok_false_13   shift, and enter state 16
	tok_else_7     reduce using rule 16
	tok__eql__eql__8reduce using rule 16
	tok__minus__10 reduce using rule 16
	tok__plus__9   reduce using rule 16
	tok__star__11  reduce using rule 16
	tok__rparen__15reduce using rule 16
	tok__lparen__14shift, and enter state 18
	id             shift, and enter state 19
	num            shift, and enter state 20
	qq_Id          shift, and enter state 21
	qq_Expr        shift, and enter state 22

	Atom           goto state 36
	Id             goto state 9

State 5

	Mul -> Mul . tok__star__11 App                      (rule 15)
	Add -> Mul .                                        (rule 19)

	rtk__eof       reduce using rule 19
	tok_Expr_dummy_1reduce using rule 19
	tok_Lc_dummy_2 reduce using rule 19
	tok_then_6     reduce using rule 19
	tok_in_4       reduce using rule 19
	tok_else_7     reduce using rule 19
	tok__eql__eql__8reduce using rule 19
	tok__minus__10 reduce using rule 19
	tok__plus__9   reduce using rule 19
	tok__star__11  shift, and enter state 35
	tok__rparen__15reduce using rule 19


State 6

	Add -> Add . tok__plus__9 Mul                       (rule 17)
	Add -> Add . tok__minus__10 Mul                     (rule 18)
	Eq -> Add .                                         (rule 21)

	rtk__eof       reduce using rule 21
	tok_Expr_dummy_1reduce using rule 21
	tok_Lc_dummy_2 reduce using rule 21
	tok_then_6     reduce using rule 21
	tok_in_4       reduce using rule 21
	tok_else_7     reduce using rule 21
	tok__eql__eql__8reduce using rule 21
	tok__minus__10 shift, and enter state 33
	tok__plus__9   shift, and enter state 34
	tok__rparen__15reduce using rule 21


State 7

	Eq -> Eq . tok__eql__eql__8 Add                     (rule 20)
	Expr -> Eq .                                        (rule 25)

	rtk__eof       reduce using rule 25
	tok_Expr_dummy_1reduce using rule 25
	tok_Lc_dummy_2 reduce using rule 25
	tok_then_6     reduce using rule 25
	tok_in_4       reduce using rule 25
	tok_else_7     reduce using rule 25
	tok__eql__eql__8shift, and enter state 32
	tok__rparen__15reduce using rule 25


State 8

	Lc -> Expr .                                        (rule 6)

	rtk__eof       reduce using rule 6
	tok_Lc_dummy_2 reduce using rule 6


State 9

	Atom -> Id .                                        (rule 11)

	rtk__eof       reduce using rule 11
	tok_Expr_dummy_1reduce using rule 11
	tok_Lc_dummy_2 reduce using rule 11
	tok_true_12    reduce using rule 11
	tok_then_6     reduce using rule 11
	tok_in_4       reduce using rule 11
	tok_false_13   reduce using rule 11
	tok_else_7     reduce using rule 11
	tok__eql__eql__8reduce using rule 11
	tok__minus__10 reduce using rule 11
	tok__plus__9   reduce using rule 11
	tok__star__11  reduce using rule 11
	tok__rparen__15reduce using rule 11
	tok__lparen__14reduce using rule 11
	id             reduce using rule 11
	num            reduce using rule 11
	qq_Id          reduce using rule 11
	qq_Expr        reduce using rule 11


State 10

	Lc -> tok_Expr_dummy_1 . Expr tok_Expr_dummy_1      (rule 3)

	tok_true_12    shift, and enter state 13
	tok_let_2      shift, and enter state 14
	tok_if_5       shift, and enter state 15
	tok_false_13   shift, and enter state 16
	tok__symbol__0 shift, and enter state 17
	tok__lparen__14shift, and enter state 18
	id             shift, and enter state 19
	num            shift, and enter state 20
	qq_Id          shift, and enter state 21
	qq_Expr        shift, and enter state 22

	Atom           goto state 3
	App            goto state 4
	Mul            goto state 5
	Add            goto state 6
	Eq             goto state 7
	Expr           goto state 31
	Id             goto state 9

State 11

	Lc -> tok_Id_dummy_0 . Id tok_Id_dummy_0            (rule 4)

	id             shift, and enter state 19
	qq_Id          shift, and enter state 21

	Id             goto state 30

State 12

	Lc -> tok_Lc_dummy_2 . Lc tok_Lc_dummy_2            (rule 2)

	tok_Expr_dummy_1shift, and enter state 10
	tok_Id_dummy_0 shift, and enter state 11
	tok_Lc_dummy_2 shift, and enter state 12
	tok_true_12    shift, and enter state 13
	tok_let_2      shift, and enter state 14
	tok_if_5       shift, and enter state 15
	tok_false_13   shift, and enter state 16
	tok__symbol__0 shift, and enter state 17
	tok__lparen__14shift, and enter state 18
	id             shift, and enter state 19
	num            shift, and enter state 20
	qq_Id          shift, and enter state 21
	qq_Expr        shift, and enter state 22
	qq_Lc          shift, and enter state 23

	Lc             goto state 29
	Atom           goto state 3
	App            goto state 4
	Mul            goto state 5
	Add            goto state 6
	Eq             goto state 7
	Expr           goto state 8
	Id             goto state 9

State 13

	Atom -> tok_true_12 .                               (rule 9)

	rtk__eof       reduce using rule 9
	tok_Expr_dummy_1reduce using rule 9
	tok_Lc_dummy_2 reduce using rule 9
	tok_true_12    reduce using rule 9
	tok_then_6     reduce using rule 9
	tok_in_4       reduce using rule 9
	tok_false_13   reduce using rule 9
	tok_else_7     reduce using rule 9
	tok__eql__eql__8reduce using rule 9
	tok__minus__10 reduce using rule 9
	tok__plus__9   reduce using rule 9
	tok__star__11  reduce using rule 9
	tok__rparen__15reduce using rule 9
	tok__lparen__14reduce using rule 9
	id             reduce using rule 9
	num            reduce using rule 9
	qq_Id          reduce using rule 9
	qq_Expr        reduce using rule 9


State 14

	Expr -> tok_let_2 . Id tok__eql__3 Expr tok_in_4 Expr    (rule 23)

	id             shift, and enter state 19
	qq_Id          shift, and enter state 21

	Id             goto state 28

State 15

	Expr -> tok_if_5 . Expr tok_then_6 Expr tok_else_7 Expr    (rule 24)

	tok_true_12    shift, and enter state 13
	tok_let_2      shift, and enter state 14
	tok_if_5       shift, and enter state 15
	tok_false_13   shift, and enter state 16
	tok__symbol__0 shift, and enter state 17
	tok__lparen__14shift, and enter state 18
	id             shift, and enter state 19
	num            shift, and enter state 20
	qq_Id          shift, and enter state 21
	qq_Expr        shift, and enter state 22

	Atom           goto state 3
	App            goto state 4
	Mul            goto state 5
	Add            goto state 6
	Eq             goto state 7
	Expr           goto state 27
	Id             goto state 9

State 16

	Atom -> tok_false_13 .                              (rule 10)

	rtk__eof       reduce using rule 10
	tok_Expr_dummy_1reduce using rule 10
	tok_Lc_dummy_2 reduce using rule 10
	tok_true_12    reduce using rule 10
	tok_then_6     reduce using rule 10
	tok_in_4       reduce using rule 10
	tok_false_13   reduce using rule 10
	tok_else_7     reduce using rule 10
	tok__eql__eql__8reduce using rule 10
	tok__minus__10 reduce using rule 10
	tok__plus__9   reduce using rule 10
	tok__star__11  reduce using rule 10
	tok__rparen__15reduce using rule 10
	tok__lparen__14reduce using rule 10
	id             reduce using rule 10
	num            reduce using rule 10
	qq_Id          reduce using rule 10
	qq_Expr        reduce using rule 10


State 17

	Expr -> tok__symbol__0 . Id tok__minus__symbol__1 Expr    (rule 22)

	id             shift, and enter state 19
	qq_Id          shift, and enter state 21

	Id             goto state 26

State 18

	Atom -> tok__lparen__14 . Expr tok__rparen__15      (rule 12)

	tok_true_12    shift, and enter state 13
	tok_let_2      shift, and enter state 14
	tok_if_5       shift, and enter state 15
	tok_false_13   shift, and enter state 16
	tok__symbol__0 shift, and enter state 17
	tok__lparen__14shift, and enter state 18
	id             shift, and enter state 19
	num            shift, and enter state 20
	qq_Id          shift, and enter state 21
	qq_Expr        shift, and enter state 22

	Atom           goto state 3
	App            goto state 4
	Mul            goto state 5
	Add            goto state 6
	Eq             goto state 7
	Expr           goto state 25
	Id             goto state 9

State 19

	Id -> id .                                          (rule 27)

	rtk__eof       reduce using rule 27
	tok_Expr_dummy_1reduce using rule 27
	tok_Id_dummy_0 reduce using rule 27
	tok_Lc_dummy_2 reduce using rule 27
	tok_true_12    reduce using rule 27
	tok_then_6     reduce using rule 27
	tok_in_4       reduce using rule 27
	tok_false_13   reduce using rule 27
	tok_else_7     reduce using rule 27
	tok__eql__eql__8reduce using rule 27
	tok__eql__3    reduce using rule 27
	tok__minus__symbol__1reduce using rule 27
	tok__minus__10 reduce using rule 27
	tok__plus__9   reduce using rule 27
	tok__star__11  reduce using rule 27
	tok__rparen__15reduce using rule 27
	tok__lparen__14reduce using rule 27
	id             reduce using rule 27
	num            reduce using rule 27
	qq_Id          reduce using rule 27
	qq_Expr        reduce using rule 27


State 20

	Atom -> num .                                       (rule 8)

	rtk__eof       reduce using rule 8
	tok_Expr_dummy_1reduce using rule 8
	tok_Lc_dummy_2 reduce using rule 8
	tok_true_12    reduce using rule 8
	tok_then_6     reduce using rule 8
	tok_in_4       reduce using rule 8
	tok_false_13   reduce using rule 8
	tok_else_7     reduce using rule 8
	tok__eql__eql__8reduce using rule 8
	tok__minus__10 reduce using rule 8
	tok__plus__9   reduce using rule 8
	tok__star__11  reduce using rule 8
	tok__rparen__15reduce using rule 8
	tok__lparen__14reduce using rule 8
	id             reduce using rule 8
	num            reduce using rule 8
	qq_Id          reduce using rule 8
	qq_Expr        reduce using rule 8


State 21

	Id -> qq_Id .                                       (rule 26)

	rtk__eof       reduce using rule 26
	tok_Expr_dummy_1reduce using rule 26
	tok_Id_dummy_0 reduce using rule 26
	tok_Lc_dummy_2 reduce using rule 26
	tok_true_12    reduce using rule 26
	tok_then_6     reduce using rule 26
	tok_in_4       reduce using rule 26
	tok_false_13   reduce using rule 26
	tok_else_7     reduce using rule 26
	tok__eql__eql__8reduce using rule 26
	tok__eql__3    reduce using rule 26
	tok__minus__symbol__1reduce using rule 26
	tok__minus__10 reduce using rule 26
	tok__plus__9   reduce using rule 26
	tok__star__11  reduce using rule 26
	tok__rparen__15reduce using rule 26
	tok__lparen__14reduce using rule 26
	id             reduce using rule 26
	num            reduce using rule 26
	qq_Id          reduce using rule 26
	qq_Expr        reduce using rule 26


State 22

	Atom -> qq_Expr .                                   (rule 7)

	rtk__eof       reduce using rule 7
	tok_Expr_dummy_1reduce using rule 7
	tok_Lc_dummy_2 reduce using rule 7
	tok_true_12    reduce using rule 7
	tok_then_6     reduce using rule 7
	tok_in_4       reduce using rule 7
	tok_false_13   reduce using rule 7
	tok_else_7     reduce using rule 7
	tok__eql__eql__8reduce using rule 7
	tok__minus__10 reduce using rule 7
	tok__plus__9   reduce using rule 7
	tok__star__11  reduce using rule 7
	tok__rparen__15reduce using rule 7
	tok__lparen__14reduce using rule 7
	id             reduce using rule 7
	num            reduce using rule 7
	qq_Id          reduce using rule 7
	qq_Expr        reduce using rule 7


State 23

	Lc -> qq_Lc .                                       (rule 5)

	rtk__eof       reduce using rule 5
	tok_Lc_dummy_2 reduce using rule 5


State 24

	%start_parseLc -> Lc__top .                         (rule 0)

	%eof           accept


State 25

	Atom -> tok__lparen__14 Expr . tok__rparen__15      (rule 12)

	tok__rparen__15shift, and enter state 48


State 26

	Expr -> tok__symbol__0 Id . tok__minus__symbol__1 Expr    (rule 22)

	tok__minus__symbol__1shift, and enter state 47


State 27

	Expr -> tok_if_5 Expr . tok_then_6 Expr tok_else_7 Expr    (rule 24)

	tok_then_6     shift, and enter state 46


State 28

	Expr -> tok_let_2 Id . tok__eql__3 Expr tok_in_4 Expr    (rule 23)

	tok__eql__3    shift, and enter state 45


State 29

	Lc -> tok_Lc_dummy_2 Lc . tok_Lc_dummy_2            (rule 2)

	tok_Lc_dummy_2 shift, and enter state 44


State 30

	Lc -> tok_Id_dummy_0 Id . tok_Id_dummy_0            (rule 4)

	tok_Id_dummy_0 shift, and enter state 43


State 31

	Lc -> tok_Expr_dummy_1 Expr . tok_Expr_dummy_1      (rule 3)

	tok_Expr_dummy_1shift, and enter state 42


State 32

	Eq -> Eq tok__eql__eql__8 . Add                     (rule 20)

	tok_true_12    shift, and enter state 13
	tok_false_13   shift, and enter state 16
	tok__lparen__14shift, and enter state 18
	id             shift, and enter state 19
	num            shift, and enter state 20
	qq_Id          shift, and enter state 21
	qq_Expr        shift, and enter state 22

	Atom           goto state 3
	App            goto state 4
	Mul            goto state 5
	Add            goto state 41
	Id             goto state 9

State 33

	Add -> Add tok__minus__10 . Mul                     (rule 18)

	tok_true_12    shift, and enter state 13
	tok_false_13   shift, and enter state 16
	tok__lparen__14shift, and enter state 18
	id             shift, and enter state 19
	num            shift, and enter state 20
	qq_Id          shift, and enter state 21
	qq_Expr        shift, and enter state 22

	Atom           goto state 3
	App            goto state 4
	Mul            goto state 40
	Id             goto state 9

State 34

	Add -> Add tok__plus__9 . Mul                       (rule 17)

	tok_true_12    shift, and enter state 13
	tok_false_13   shift, and enter state 16
	tok__lparen__14shift, and enter state 18
	id             shift, and enter state 19
	num            shift, and enter state 20
	qq_Id          shift, and enter state 21
	qq_Expr        shift, and enter state 22

	Atom           goto state 3
	App            goto state 4
	Mul            goto state 39
	Id             goto state 9

State 35

	Mul -> Mul tok__star__11 . App                      (rule 15)

	tok_true_12    shift, and enter state 13
	tok_false_13   shift, and enter state 16
	tok__lparen__14shift, and enter state 18
	id             shift, and enter state 19
	num            shift, and enter state 20
	qq_Id          shift, and enter state 21
	qq_Expr        shift, and enter state 22

	Atom           goto state 3
	App            goto state 38
	Id             goto state 9

State 36
